changed some images

--- a/AbayMVC/AbayMVC/Views/Home/Index.cshtml
+++ b/AbayMVC/AbayMVC/Views/Home/Index.cshtml
@@ -61,56 +61,56 @@
 
             <div class="row" id="center">
 
-                <a href="~/Home/Bid_item">
+                <a href="~/Item/Listing?catId=4">
                     <div class="col-xs-3" id="category">
-                        <img src="~/Images/Categorys/clothes.png" />
-                        <p>Women's Clothing</p>
+                        <img src="~/Images/Categorys/electronics.jpg" />
+                        <p>Electronics</p>
                     </div>
                 </a>
-                <a href="~/Home/Bid_item">
+                <a href="~/Item/Listing?catId=3">
                     <div class="col-xs-3" id="category">
-                        <img id="categoryimg" src="~/Images/Categorys/womens_shoes.png" />
-                        <p>Women's Shoes</p>
+                        <img id="categoryimg" src="~/Images/Categorys/clothing.jpg" />
+                        <p>Fashion</p>
                     </div>
                 </a>
-                <a href="~/Home/Bid_item">
+                <a href="~/Item/Listing?catId=7">
                     <div class="col-xs-3" id="category">
-                        <img id="categoryimg" src="~/Images/Categorys/mens_clothing.png" />
-                        <p>Men's Clothing</p>
+                        <img id="categoryimg" src="~/Images/Categorys/sports.jpg" />
+                        <p>Sporting Goods</p>
                     </div>
                 </a>
-                <a href="~/Home/Bid_item">
+                <a href="~/Item/Listing?catId=6">
                     <div class="col-xs-3" id="category">
-                        <img id="categoryimg" src="~/Images/Categorys/mens_shoes.png" />
-                        <p>Men's Shoes</p>
+                        <img id="categoryimg" src="~/Images/Categorys/garden.jpg" />
+                        <p>Home & Garden</p>
                     </div>
                 </a>
             </div>
 
             <div class="row" id="center" style="margin-top:10px;">
 
-                <a href="~/Home/Bid_item">
+                <a href="~/Item/Listing?catId=9">
                     <div class="col-xs-3" id="category">
-                        <img src="~/Images/Categorys/watches.png" />
-                        <p>Watches</p>
+                        <img src="~/Images/Categorys/business.jpg" />
+                        <p>Business & Industrial</p>
                     </div>
                 </a>
-                <a href="~/Home/Bid_item">
+                <a href="~/Item/Listing?catId=8">
                     <div class="col-xs-3" id="category">
-                        <img id="categoryimg" src="~/Images/Categorys/fine_jewelry.png" />
-                        <p>Fine Jewelry</p>
+                        <img id="categoryimg" src="~/Images/Categorys/toys.jpg" />
+                        <p>Toys & Hobbies</p>
                     </div>
                 </a>
-                <a href="~/Home/Bid_item">
+                <a href="~/Item/Listing?catId=5">
                     <div class="col-xs-3" id="category">
-                        <img id="categoryimg" src="~/Images/Categorys/jewelry.png" />
-                        <p>Jewelry</p>
+                        <img id="categoryimg" src="~/Images/Categorys/collectibles.jpg" />
+                        <p>Collectibles & Art</p>
                     </div>
                 </a>
-                <a href="~/Home/Bid_item">
+                <a href="~/Item/Listing?catId=2">
                     <div class="col-xs-3" id="category">
-                        <img id="categoryimg" src="~/Images/Categorys/belts.png" />
-                        <p>Belts</p>
+                        <img id="categoryimg" src="~/Images/Categorys/motor.jpg" />
+                        <p>Motors</p>
                     </div>
                 </a>
             </div>
