--- a/AbayWPF/LoginWindow.xaml
+++ b/AbayWPF/LoginWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DedicatedClient"
         mc:Ignorable="d"
-        Title="LoginWindow" Height="200" Width="300" ResizeMode="NoResize">
+        Title="LoginWindow" Height="230" Width="300" ResizeMode="NoResize">
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
@@ -18,6 +18,7 @@
                 <RowDefinition Height="5"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="20"/>
+                <RowDefinition Height="30"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="20"/>
@@ -32,6 +33,7 @@
             <Label Grid.Row="5" Grid.Column="1" Content="Password" FontSize="14"/>
             <PasswordBox Grid.Row="5" Grid.Column="3" Name="txtPassword" FontStyle="Italic"/>
             <Button Grid.Row="7" Grid.Column="1" Content="Login" Click="Button_Click" IsDefault="True" Grid.ColumnSpan="3" FontSize="14" />
+            <Label Grid.Row="9" Grid.Column="1" Content="(The username is 'a', the password is 'a'.)" Grid.ColumnSpan="3" HorizontalAlignment="Center" FontSize="10"/>
         </Grid>
     </Grid>
 </Window>
