--- a/AbayMVC/AbayMVC/Views/Home/Contact.cshtml
+++ b/AbayMVC/AbayMVC/Views/Home/Contact.cshtml
@@ -25,7 +25,7 @@
 <div style="background-color:#dfdfe1; padding: 30px 0 30px 0;">
     <div class="container-email">
         <a href="mailto:1067390@ucn.com" class="email">
-            <img style="width:40px;padding-bottom: 3px;" src="~/Image/email.png" /> &nbsp;&nbsp;&nbsp; Email us
+            <img style="width:40px;padding-bottom: 3px;" src="~/Images/email.png" /> &nbsp;&nbsp;&nbsp; Email us
         </a>
     </div>
 </div>
