--- a/AbayMVC/AbayMVC/Views/Item/Listing.cshtml
+++ b/AbayMVC/AbayMVC/Views/Item/Listing.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<AbayMVC.ItemServiceReference.Item>
 @Styles.Render("~/Content/abay-Design.css")
 @{
-    ViewBag.Title = "Showcase";
+    ViewBag.Title = "Listing";
 }
 
-<h2>Listing</h2>
 <div class="container">
+    <h2>@ViewBag.Title</h2>
     <table class="table">
         <tr>
             <th>
