--- a/AbayMVC/AbayMVC/Views/Item/OldBids.cshtml
+++ b/AbayMVC/AbayMVC/Views/Item/OldBids.cshtml
@@ -3,38 +3,39 @@
 @{
     ViewBag.Title = "OldBids";
 }
+<div class="container">
+    <h2>@ViewBag.Title</h2>
 
-<h2>OldBids</h2>
-
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.BuyerName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Amount)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Timestamp)
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
+    <table class="table">
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.BuyerName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Amount)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Timestamp)
-            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.BuyerName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Amount)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Timestamp)
+            </th>
+            <th></th>
         </tr>
-    }
 
-</table>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.BuyerName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Amount)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Timestamp)
+                </td>
+            </tr>
+        }
 
-<a href="@Url.Action("Bid", "Item", new { itemId = Model.First().ItemId})"><span> Go back </span></a>
+    </table>
+
+    <a href="@Url.Action("Bid", "Item", new { itemId = Model.First().ItemId})"><span> Go back </span></a>
+</div>
