--- a/AbayMVC/AbayMVC/Views/Shared/Error.cshtml
+++ b/AbayMVC/AbayMVC/Views/Shared/Error.cshtml
@@ -6,8 +6,10 @@
 </head>
 <body>
     <hgroup>
-        <h1>Error.</h1>
-        <h2>An error occurred while processing your request.</h2>
+        <div class="container">
+            <h1>Error.</h1>
+            <h2>An error occurred while processing your request.</h2>
+        </div>
     </hgroup>
 </body>
 </html>
