--- a/AbayMVC/AbayMVC/Views/Shared/_Layout.cshtml
+++ b/AbayMVC/AbayMVC/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                     }
 
 
-                    @using (Html.BeginForm("Listing", "Item", FormMethod.Get))
+                    @using (Html.BeginForm("Listing", "Item", FormMethod.Post))
                     {
                         <li class="input-group" style="display: flex;padding: 16px 0 0 10px;">
 
